--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_latency2/05-30_10-54/wandb/run-20240530_105420-04m29gq4/files/checkpoint_final.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/ZigZag_rewardshaping/05-31_21-56/wandb/run-20240531_215651-482ytp3v/files/checkpoint_final.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Track_star.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Hover_best.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -18,13 +18,17 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  eye: [0.005, 0., 6.]
+  # up
+  # eye: [0.005, 0., 6.]
+  # lookat: [0., 0., 1.]
+  # front
+  eye: [1.0, 0., 2.]
   lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: star
-  # run_name: debug
+  run_name: Track_wo_traj_w_preparation10
+  # run_name: eval_hover
   job_type: train
   entity: chenjy
   project: Track
@@ -35,9 +39,9 @@ wandb:
   tags: 
 
 defaults:
-  - task: Star
+  # - task: Star
   # - task: ZigZag
-  # - task: Track
-  # - task: Spread
+  - task: Track
+  # - task: Hover
   - algo: mappo
   - _self_
