--- a/cfg/task/Star.yaml
+++ b/cfg/task/Star.yaml
@@ -19,6 +19,7 @@ latency_step: 5
 
 reset_thres: 1.
 future_traj_steps: 4
+future_traj_steps_size: 5
 
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 1.6
