--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -23,13 +23,14 @@ future_traj_steps: 4
 reward_effort_weight: 0.
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 1.6
-reward_acc_scale: 100
+reward_acc_scale: 10
 prepare: false
 prepare_step: 10
 
 # vel and acc constraint
-use_acc: true
-use_acc_reward: true
+use_acc: false
+use_acc_reward: false
+use_vel_reward: false
 max_linear_v: 2.0
 max_angular_v: 2.0
 max_linear_a: 3.5
