--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,7 +7,7 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/Track_star.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Track_lv2_av2_la3_5_aa20/06-04_21-29/wandb/run-20240604_212958-3cqizwle/files/checkpoint_2306998272.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Track_lv2_av2_la3_5_aa20/06-04_21-29/wandb/run-20240604_212958-3cqizwle/files/checkpoint_2202140672.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -27,13 +27,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Track_lv2_av2_la3_5_aa20_eval
-  # run_name: debug
+  # run_name: Track_lv2_av2_la3_5_aa20_random_traindist_load
+  run_name: debug
   job_type: train
   entity: chenjy
   project: Track
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
