--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -27,13 +27,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Goto_wotime_onlypos
-  run_name: Goto_wotime_onlypos_eval
+  run_name: Goto_return_wotime
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: Goto
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
@@ -41,7 +41,8 @@ wandb:
 defaults:
   # - task: Star
   # - task: ZigZag
-  - task: Goto
+  # - task: Goto
+  - task: Goto_return
   # - task: Hover
   - algo: mappo
   - _self_
