--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,7 +7,7 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Goto_wotime_onlypos/06-06_19-38/wandb/run-20240606_193814-pd49vhgm/files/checkpoint_550764544.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Goto_return_wotime/06-06_21-56/wandb/run-20240606_215641-ft1bqn2z/files/checkpoint_final.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -27,7 +27,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Goto_return_wotime
+  run_name: Exchange
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -39,10 +39,8 @@ wandb:
   tags: 
 
 defaults:
-  # - task: Star
-  # - task: ZigZag
   # - task: Goto
-  - task: Goto_return
-  # - task: Hover
+  # - task: Goto_return
+  - task: Exchange
   - algo: mappo
   - _self_
