--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,7 +7,7 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Goto_return_wotime/06-06_21-56/wandb/run-20240606_215641-ft1bqn2z/files/checkpoint_final.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Exchange/06-07_17-49/wandb/run-20240607_174924-t2wmzpqh/files/checkpoint_1153564672.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -22,12 +22,12 @@ viewer:
   # eye: [0.005, 0., 6.]
   # lookat: [0., 0., 1.]
   # front
-  eye: [1.0, 0., 2.]
+  eye: [1.0, 0., 4.]
   lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Exchange
+  run_name: Exchange_wotime
   # run_name: debug
   job_type: train
   entity: chenjy
