add hard smooth and cbf

--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 4096
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -16,6 +16,9 @@ num_drones: 2
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
 reward_time_scale: 0.0
+
+use_cbf: true
+action_delta: 0.007
 
 # observation options
 time_encoding: true
