--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,8 +7,8 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Exchange_wotime_smoothscale5/06-08_22-20/wandb/run-20240608_222025-cdfrllk0/files/checkpoint_final.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Exchange_load/06-09_21-16/wandb/run-20240609_211629-c158k83j/files/checkpoint_final.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -27,7 +27,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Exchange
+  run_name: Exchange_load_hardsmooth00025
   # run_name: debug
   job_type: train
   entity: chenjy
