update epsilon is None

--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -5,7 +5,8 @@ target_clip: 1.0
 max_thrust_ratio: 0.9
 fixed_yaw: 0
 use_action_smooth: 1
-epsilon: 0.0025 # action smooth
+# epsilon: 0.0025 # action smooth
+epsilon: null
 inertia:
   xx: 1.4e-5
   xy: 0.0
