--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -7,15 +7,16 @@ defaults:
 
 env:
   num_envs: 4096
-  max_episode_length: 500
+  max_episode_length: 1000
 
 drone_model: crazyflie
 force_sensor: false
 num_drones: 2
 
-reward_action_smoothness_weight: 0.0
+reward_action_smoothness_weight: 5.0
 reward_distance_scale: 10.0
 reward_time_scale: 0.0
+action_error_threshold: 0.01
 
 use_cbf: true
 action_delta: 0.007
