--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -6,20 +6,17 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
-  max_episode_length: 1000
+  num_envs: 2048
+  max_episode_length: 500
 
 drone_model: crazyflie
 force_sensor: false
 num_drones: 2
 
-reward_action_smoothness_weight: 5.0
+reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
 reward_time_scale: 0.0
-action_error_threshold: 0.01
-
-use_cbf: true
-action_delta: 0.007
+# action_error_threshold: 0.01
 
 # observation options
 time_encoding: true
