--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -4,8 +4,9 @@ name: crazyflie
 target_clip: 1.0
 max_thrust_ratio: 0.9
 fixed_yaw: 0
+use_cbf: 0
 use_action_smooth: 0
-epsilon: 0.005 # action smooth
+epsilon: 0.007 # action smooth
 # epsilon: null
 inertia:
   xx: 1.4e-5
