--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -6,15 +6,16 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 4096
   max_episode_length: 500
 
 drone_model: crazyflie
 force_sensor: false
 num_drones: 2
 
-reward_action_smoothness_weight: 0.0
+reward_action_smoothness_weight: 5.0
 reward_distance_scale: 10.0
+reward_bonus_scale: 30.0
 reward_time_scale: 0.0
 # action_error_threshold: 0.01
 
