--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -27,7 +27,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Star
+  run_name: Star_smooth
   # run_name: debug
   job_type: train
   entity: chenjy
