--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,9 +6,9 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Exchange_smooth/06-12_19-28/wandb/run-20240612_192836-i9pepepf/files/checkpoint_1389625344.pt
-model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach_and_return_load/06-13_16-05/wandb/run-20240613_160544-yvlac912/files/checkpoint_943980544.pt
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach/06-13_15-44/wandb/run-20240613_154411-l269s75t/files/checkpoint_419692544.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -27,7 +27,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Go_return
+  run_name: Go_return_reach_and_returnbonus_returnthreshold0_5
   # run_name: debug
   job_type: train
   entity: chenjy
