--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,8 +7,8 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach_and_return_load/06-13_16-05/wandb/run-20240613_160544-yvlac912/files/checkpoint_943980544.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach/06-13_15-44/wandb/run-20240613_154411-l269s75t/files/checkpoint_419692544.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach_and_return_threshold07_load/06-13_18-14/wandb/run-20240613_181424-mi31crvc/files/checkpoint_812908544.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -27,11 +27,11 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Go_return_reach_and_returnbonus_returnthreshold0_5
-  # run_name: debug
+  # run_name: Go_return_reach_and_return_threshold1
+  run_name: Track
   job_type: train
   entity: chenjy
-  project: Exchange
+  project: sim2real
   # mode: disabled
   mode: online # set to 'disabled' when debugging locally, online
   run_id: 
@@ -39,8 +39,8 @@ wandb:
   tags: 
 
 defaults:
-  - task: Goto_return
-  # - task: Star
+  # - task: Goto_return
+  - task: Track
   # - task: Exchange
   - algo: mappo
   - _self_
