--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -27,8 +27,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Go_return_reach_and_return_threshold1
-  run_name: Track
+  # run_name: debug
+  run_name: Star
   job_type: train
   entity: chenjy
   project: sim2real
@@ -39,8 +39,8 @@ wandb:
   tags: 
 
 defaults:
-  # - task: Goto_return
-  - task: Track
+  - task: Star
+  # - task: Track
   # - task: Exchange
   - algo: mappo
   - _self_
