--- a/cfg/task/MultiGoto.yaml
+++ b/cfg/task/MultiGoto.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 100
+  num_envs: 4096
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -14,6 +14,7 @@ force_sensor: false
 
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
+reward_bonus_scale: 30.0
 reward_time_scale: 0.0
 
 # observation options
