--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,7 +7,7 @@ env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach_and_return_load/06-13_16-05/wandb/run-20240613_160544-yvlac912/files/checkpoint_943980544.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Multigoto/06-14_18-09/wandb/run-20240614_180959-j7pojfho/files/checkpoint_655622144.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Star_Tm0028/06-14_21-13/wandb/run-20240614_211344-748h563y/files/checkpoint_final.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -27,21 +27,21 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Multigoto_eval
-  run_name: debug
+  run_name: Star_Tm0028_smooth05
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: sim2real
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  # - task: Star
+  - task: Star
   # - task: Track
   # - task: Exchange
-  - task: MultiGoto
+  # - task: MultiGoto
   - algo: mappo
   - _self_
