update multigoto and star

--- a/cfg/task/MultiGoto.yaml
+++ b/cfg/task/MultiGoto.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
+  num_envs: 1024
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -16,6 +16,7 @@ reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
 reward_time_scale: 0.0
+reach_threshold: 0.05
 
 # observation options
 time_encoding: true
