--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -27,7 +27,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Star_Tm043_initvel0_smooth1
+  run_name: Track_Tm043_smooth05
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -39,8 +39,8 @@ wandb:
   tags: 
 
 defaults:
-  - task: Star
-  # - task: Track
+  # - task: Star
+  - task: Track
   # - task: Exchange
   # - task: MultiGoto
   - algo: mappo
