fix bugs in multigoto and goto_static

--- a/cfg/task/Goto_static.yaml
+++ b/cfg/task/Goto_static.yaml
@@ -1,4 +1,4 @@
-name: MultiGoto
+name: Goto_static
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 1024
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -14,9 +14,8 @@ force_sensor: false
 
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
-reward_bonus_scale: 30.0
 reward_time_scale: 0.0
-reach_threshold: 0.3
+reward_collision: 100.0
 
 # observation options
 time_encoding: true
