--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
+  num_envs: 100
   max_episode_length: 1000
 
 drone_model: Crazyflie
@@ -15,11 +15,13 @@ time_encoding: true
 intrinsics: false
 wind: false
 latency: false
-latency_step: 5
+latency_step: 2
+random_latency: false
 
 reset_thres: 1.
 future_traj_steps: 4
 
+use_eval: 1
 reward_action_smoothness_weight: 0.5
 reward_distance_scale: 5.0
 
