--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,10 +5,13 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_return_reach_and_return_load/06-13_16-05/wandb/run-20240613_160544-yvlac912/files/checkpoint_943980544.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Go_static/06-16_17-30/wandb/run-20240616_173013-hrtosiih/files/checkpoint_341049344.pt
-model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm0349_smooth05.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm0349_wosmooth.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm04_smooth05.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm04_wosmooth.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm043_smooth05.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm043_wosmooth.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -27,9 +30,9 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Goto_static
-  # run_name: Goto_static_undergroundcylinder
+  # run_name: Goto_static_smooth1
   # run_name: debug
+  run_name: Track_Tm043_wosmooth_eval
   job_type: train
   entity: chenjy
   project: sim2real
@@ -41,8 +44,8 @@ wandb:
 
 defaults:
   # - task: Star
-  # - task: Track
-  - task: Goto_static
+  - task: Track
+  # - task: Goto_static
   # - task: MultiGoto
   - algo: mappo
   - _self_
