update goto_static yaml

--- a/cfg/task/Goto_static.yaml
+++ b/cfg/task/Goto_static.yaml
@@ -6,13 +6,14 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1024
+  num_envs: 4096
   max_episode_length: 500
 
 drone_model: crazyflie
 force_sensor: false
 
-reward_action_smoothness_weight: 1.0
+use_eval: 0
+reward_action_smoothness_weight: 2.0
 reward_distance_scale: 10.0
 reward_time_scale: 0.0
 reward_collision: 100.0
