--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_Tm04_wosmooth_wolatency.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Goto_static_smooth1/06-17_14-58/wandb/run-20240617_145812-zwtae84q/files/checkpoint_865140736.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -25,9 +25,9 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Goto_static_smooth1
+  run_name: Goto_static_smooth2
   # run_name: debug
-  run_name: Track_Tm04_wosmooth_latency2
+  # run_name: Track_Tm04_wosmooth_latency2
   job_type: train
   entity: chenjy
   project: sim2real
@@ -39,8 +39,8 @@ wandb:
 
 defaults:
   # - task: Star
-  - task: Track
-  # - task: Goto_static
+  # - task: Track
+  - task: Goto_static
   # - task: MultiGoto
   - algo: mappo
   - _self_
