--- a/cfg/task/Goto_static.yaml
+++ b/cfg/task/Goto_static.yaml
@@ -12,6 +12,7 @@ env:
 drone_model: crazyflie
 force_sensor: false
 
+use_eval: 0
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
 reward_time_scale: 0.0
