--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -26,7 +26,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: multigo_wosmooth
+  run_name: multigo_smooth02
   # run_name: debug
   job_type: train
   entity: chenjy
