--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -26,8 +26,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: multigo_wosmooth_point2_successbonus
-  # run_name: debug
+  # run_name: multigo_wosmooth_point2_successbonus
+  run_name: Goto_static_smooth1
   job_type: train
   entity: chenjy
   project: sim2real
@@ -40,7 +40,7 @@ wandb:
 defaults:
   # - task: Star
   # - task: Track
-  # - task: Goto_static
-  - task: MultiGoto
+  - task: Goto_static
+  # - task: MultiGoto
   - algo: mappo
   - _self_
