--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -28,6 +28,7 @@ wandb:
   group: ${oc.select:..task.name}
   # run_name: multigo_wosmooth_point2_successbonus
   run_name: Goto_static_smooth1
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: sim2real
