--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -13,7 +13,8 @@ drone_model: crazyflie
 force_sensor: false
 num_drones: 2
 
-reward_action_smoothness_weight: 10.0
+use_eval: 0
+reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
 reward_time_scale: 0.0
