--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -26,7 +26,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: multigo_smooth1_point2_large_eval
+  # run_name: debug
   run_name: goto_static2_wosmooth
   job_type: train
   entity: chenjy
