--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -26,20 +26,20 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: goto_static2_wosmooth
+  run_name: debug
+  # run_name: goto_static2_wosmooth
   job_type: train
   entity: chenjy
   project: sim2real
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: Goto_static
-  # - task: Track
+  # - task: Goto_static
+  - task: Track
   # - task: Exchange
   # - task: MultiGoto
   - algo: mappo
