fix bugs in goto_static

--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -14,7 +14,8 @@ force_sensor: false
 num_drones: 2
 
 use_eval: 0
-reward_action_smoothness_weight: 0.0
+use_last_action: 0
+reward_action_smoothness_weight: 10.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
 reward_time_scale: 0.0
