--- a/cfg/task/Goto_static.yaml
+++ b/cfg/task/Goto_static.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 4096 # 4096
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -15,7 +15,7 @@ force_sensor: false
 use_eval: 0
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 10.0
-reward_bonus_scale: 10.0
+reward_bonus_scale: 30.0
 reward_collision: 100.0 # 100.0
 reach_threshold: 0.05
 
