--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/multigo_smooth05_point2_large/06-20_14-57/wandb/run-20240620_145742-jwgk4kwo/files/checkpoint_1192886272.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/goto_static2_wosmooth/06-21_15-36/wandb/run-20240621_153627-1g04z5rh/files/checkpoint_1232207872.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/goto_static_wosmooth/06-22_14-23/wandb/run-20240622_142350-o2o04qkj/files/checkpoint_1271529472.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/goto_static_wosmooth/06-22_16-42/wandb/run-20240622_164253-tg1wboso/files/checkpoint_final.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -17,17 +18,17 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # up
-  # eye: [0.005, 0., 6.]
-  # lookat: [0., 0., 1.]
   # front
   eye: [0.005, 0., 4.]
   lookat: [0., 0., 1.]
+  # # follow drone
+  # eye: [0., 2.0, 2.5]
+  # lookat: [0., 0., 1.0]
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: multigoto_t_0
-  run_name: goto_static2_wosmooth
+  # run_name: debug
+  run_name: goto_static_wosmooth
   job_type: train
   entity: chenjy
   project: sim2real
