--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
+  num_envs: 4096 # 4096
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -14,8 +14,9 @@ force_sensor: false
 num_drones: 2
 
 use_eval: 0
-use_last_action: 0
-reward_action_smoothness_weight: 10.0
+use_prev_action: 0
+use_prev_prev_action: 0
+reward_action_smoothness_weight: 1.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
 reward_time_scale: 0.0
