--- a/cfg/task/Exchange.yaml
+++ b/cfg/task/Exchange.yaml
@@ -16,7 +16,8 @@ num_drones: 2
 use_eval: 0
 use_prev_action: 0
 use_prev_prev_action: 0
-reward_action_smoothness_weight: 1.0
+use_action_error_order2: 0
+reward_action_smoothness_weight: 10.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
 reward_time_scale: 0.0
