--- a/cfg/task/Goto_static.yaml
+++ b/cfg/task/Goto_static.yaml
@@ -13,6 +13,7 @@ drone_model: crazyflie
 force_sensor: false
 
 use_eval: 0
+use_action_error_order2: 0
 reward_action_smoothness_weight: 1.0
 reward_distance_scale: 10.0
 reward_bonus_scale: 30.0
