--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -22,6 +22,7 @@ reset_thres: 1.
 future_traj_steps: 4
 
 use_eval: 0
+use_action_error_order2: 0
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 5.0
 
