--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,8 +5,8 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/goto_static_smooth1/06-23_21-34/wandb/run-20240623_213402-6b6mhqrv/files/checkpoint_final.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/goto_static_smooth1/06-23_21-34/wandb/run-20240623_213402-6b6mhqrv/files/checkpoint_final.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: goto_static_smooth1_eval
-  # run_name: goto_static_smooth1_woorder2
+  run_name: Track_randomlatency2_wosmooth
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: sim2real
@@ -37,8 +37,8 @@ wandb:
   tags: 
 
 defaults:
-  - task: Goto_static
-  # - task: Track
+  # - task: Goto_static
+  - task: Track
   # - task: Exchange
   # - task: MultiGoto
   - algo: mappo
