--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -33,10 +33,14 @@ rotor_configuration:
   # 1/4mg = (mean_hover_pwm / 2**16) * omega_max^2 * force_constants
   # force_constants = 1/4mg * kf / omega_max^2
   # kf = force_constants * omega_max^2 / 1/4mg
-  - 2.350347298350041e-08 # kf = 2**16 / mean_hover_pwm = 1.6
-  - 2.350347298350041e-08
-  - 2.350347298350041e-08
-  - 2.350347298350041e-08
+  # - 2.350347298350041e-08 # kf = 2**16 / mean_hover_pwm = 1.6
+  # - 2.350347298350041e-08
+  # - 2.350347298350041e-08
+  # - 2.350347298350041e-08
+  - 2.6441407106437967e-08 # simopt
+  - 2.6441407106437967e-08
+  - 2.6441407106437967e-08
+  - 2.6441407106437967e-08
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
@@ -53,10 +57,9 @@ rotor_configuration:
   - 2.35619449
   - 3.92699082
   - 5.49778714
-  # time_constant: 0.43 # 0.43, tau = time_constant
   # time_constant: 0.023255813953488372 # 0.43, tau = dt / time_constant
-  # time_constant: 0.028585119515659244 # 0.349, simopt
-  time_constant: 0.025 # 0.4, DATT
+  # time_constant: 0.025 # 0.4, DATT
+  time_constant: 0.02736377359664069
 controller_configuration: # invalid
   gain:
   - 0.0052
