--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -37,10 +37,10 @@ rotor_configuration:
   # - 2.350347298350041e-08
   # - 2.350347298350041e-08
   # - 2.350347298350041e-08
-  - 2.3454137942793112e-08 # simopt, 先kf，后Tm
-  - 2.3454137942793112e-08
-  - 2.3454137942793112e-08
-  - 2.3454137942793112e-08
+  - 2.2034505922031636e-08 # simopt
+  - 2.2034505922031636e-08
+  - 2.2034505922031636e-08
+  - 2.2034505922031636e-08
   # - 2.2034505922031636e-08 # kf = 1.5
   # - 2.2034505922031636e-08
   # - 2.2034505922031636e-08
@@ -62,7 +62,7 @@ rotor_configuration:
   - 3.92699082
   - 5.49778714
   # time_constant: 0.025 # 0.4, DATT, tau = dt / time_constant
-  time_constant: 0.022206083355528664 # simopt, 先kf，后Tm
+  time_constant: 0.018472893755721052 # simopt
 controller_configuration: # invalid
   gain:
   - 0.0052
